# metaphrand

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SCORE_FRAMEWORK.md  STORY_SPEC.md  pyproject.toml
brehon/: __init__.py  arrangement.py  audio.py  audiodrama.py  canon.py  cinema.py  concreteness.py  density.py  doorways.py  dossier.py  embodiment.py  generate.py  metaphor.py  pipeline.py  prompt.py  render.py  repair.py  showing.py  story.py  weave.py  world.py
cinema/: FRAMELOOK.md  SPEC.md  TRANSITIONS.md  __init__.py  assemble.py  audio.py  backends.py  characters.py  frames.py  project.py  tripo.py
culture/: GATE.md  amal_kasumba.md  birth.md  cremation.md  cultural_gate.py  matchmaking.md  mundan.md  wedding.md
docs/: 03-VOICE_GUIDE.md  04-VOICE_FROM_CHART.md  05-PASSES.md  06-THE-ONE-LAW.md  07-SCENE-CRAFT.md  WRITING_ISSUES.md
examples/: civilwar.py  civilwar_animatic.py  civilwar_av.py  civilwar_bakeoff.py  civilwar_npr_test.py  civilwar_set3d.py  civilwar_stage3d.py  free_ross_audio.py  generate.py  heir.py  heir_elevenlabs.py  heir_full_audio.py  heir_storyboard.py  heir_table_read.py  heir_video.py  janitor.py  janitor_audio.py  mirror.py  petrichor.py  prose_gates.py  ray.py  render_audio.py  score.py  seeing.py  seen.py  setplan.py  three_act.py  title_seq.py  worksong.py  youtube_upload.py
metaphrand/: audio.py  blind_attribution.py  craftlint.py  drama.py  editor.py  generate.py  heart.py  naturalness.py  passes.py  pipeline.py  preflight.py  prose.py  run_scene.py  scene_craft.py
projects/: amal.py  free_ross.py  sky_king.py  (+1 more)
(+1115 files in other folders)
